[gd_scene load_steps=41 format=2]

[ext_resource path="res://Sprites/karakter/EnemySHOTGUN-sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy_scripts/VisionArea.gd" type="Script" id=2]
[ext_resource path="res://scripts/enemy_scripts/EnemyWeaponHandler.gd" type="Script" id=3]
[ext_resource path="res://scripts/enemy_scripts/Enemy.gd" type="Script" id=4]
[ext_resource path="res://scenes/weapon_scenes/Shotgun.tscn" type="PackedScene" id=5]

[sub_resource type="PhysicsMaterial" id=47]
friction = 0.0
rough = true

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=78]
animations = [ {
"frames": [ SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "DEATH",
"speed": 5.0
}, {
"frames": [ SubResource( 84 ), SubResource( 85 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
}, {
"frames": [ SubResource( 86 ), SubResource( 87 ), SubResource( 88 ) ],
"loop": true,
"name": "WALK",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 32.0

[sub_resource type="CircleShape2D" id=90]
radius = 256.0

[sub_resource type="Animation" id=67]
resource_name = "COMBAT"
length = 0.6

[sub_resource type="Animation" id=68]
resource_name = "DEAD"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}

[sub_resource type="Animation" id=69]
resource_name = "FIRING"
length = 0.4

[sub_resource type="Animation" id=70]
resource_name = "IDLE"

[sub_resource type="Animation" id=71]
resource_name = "PATROL"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "COMBAT"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "DEAD"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "FIRING"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "IDLE"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "PATROL"

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=45]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=89]

[sub_resource type="AnimationNodeStateMachine" id=23]
states/COMBAT/node = SubResource( 26 )
states/COMBAT/position = Vector2( 555, 13 )
states/DEAD/node = SubResource( 27 )
states/DEAD/position = Vector2( 321, 167 )
states/FIRING/node = SubResource( 42 )
states/FIRING/position = Vector2( 555, 167 )
states/IDLE/node = SubResource( 28 )
states/IDLE/position = Vector2( 105, 115 )
states/PATROL/node = SubResource( 29 )
states/PATROL/position = Vector2( 105, 13 )
transitions = [ "IDLE", "DEAD", SubResource( 31 ), "PATROL", "DEAD", SubResource( 32 ), "COMBAT", "DEAD", SubResource( 33 ), "IDLE", "COMBAT", SubResource( 36 ), "PATROL", "COMBAT", SubResource( 37 ), "IDLE", "PATROL", SubResource( 40 ), "COMBAT", "FIRING", SubResource( 44 ), "FIRING", "PATROL", SubResource( 45 ), "FIRING", "DEAD", SubResource( 89 ) ]
start_node = "IDLE"
graph_offset = Vector2( -246, -30 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=72]

[node name="EnemyShotgun" type="RigidBody2D"]
z_index = 10
mode = 2
physics_material_override = SubResource( 47 )
can_sleep = false
linear_damp = 10.0
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 78 )
animation = "IDLE"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 18 )

[node name="EnemyHeadPivot" type="Node2D" parent="."]

[node name="WeaponHandler" type="Node2D" parent="EnemyHeadPivot"]
script = ExtResource( 3 )

[node name="Shotgun" parent="EnemyHeadPivot/WeaponHandler" instance=ExtResource( 5 )]

[node name="VisionArea" type="Area2D" parent="EnemyHeadPivot"]
script = ExtResource( 2 )

[node name="VisionCheck" type="RayCast2D" parent="EnemyHeadPivot/VisionArea"]
enabled = true
cast_to = Vector2( 800, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHeadPivot/VisionArea"]
position = Vector2( 192, 0 )
shape = SubResource( 90 )

[node name="MovementRay" type="RayCast2D" parent="EnemyHeadPivot"]
enabled = true
cast_to = Vector2( 50, 0 )

[node name="StateMachineStates" type="AnimationPlayer" parent="."]
anims/COMBAT = SubResource( 67 )
anims/DEAD = SubResource( 68 )
anims/FIRING = SubResource( 69 )
anims/IDLE = SubResource( 70 )
anims/PATROL = SubResource( 71 )

[node name="StateMachine" type="AnimationTree" parent="."]
tree_root = SubResource( 23 )
anim_player = NodePath("../StateMachineStates")
active = true
process_mode = 0
parameters/playback = SubResource( 72 )
